# botting-os

./: .gitignore  BOTTING_OS_MVP_PRD.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  INSTALL.md  README.md  color-playground.html  drizzle.config.ts  package-lock.json  package.json
.claude/: UI-REDESIGN-HANDOFF.md  settings.json
.claude/agents/: verify-app.md
.claude/commands/: build.md  commit-push-pr.md  dev.md  test.md
.claude/orchestration-bottingos/: ORCHESTRATOR_PROMPT.md  PRD.md  PROGRESS.md
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: README.md  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
docs/: DISCOVERY.md  PHASES.md  PRD.md  PROGRESS.md  README.md  braindump-full.txt  braindump-orchestration.txt  featurelist.txt
docs/research/: aycd-bot-ecosystem.md  cost-strategy.md  desktop-app-architecture.md  discord-cdp-implementation.md  discord-integration.md  discord-realtime-capture.md  discord-tos-safe-approaches.md  marketplace-apis.md  mobile-architecture.md  monetization-app-store.md  pricing-apis-implementation.md  tauri-nextjs-drizzle-implementation.md  testing-deployment-implementation.md  webhook-supabase-implementation.md
docs/tasks/: task-1.1.md  task-1.4.md  task-2.1.md  (+29 more)
frontend/: package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/commands/: discord.rs  mod.rs  pricing.rs
src-tauri/src/discord/: cdp.rs  mod.rs  types.rs
(+183 files in other folders)
